# partition-registry

./: .envrc  .envrc.local  .gitignore  Dockerfile  LICENSE  README.md  TODO  compose.yml  example.py  local.cache  partition.py  pylintrc_tests  pyproject.toml  setup.cfg  test.sh  test_something.py
.github/workflows/: on_push.yml  push-to-master.yml
partition_registry/: __init__.py  concept.txt  config.yaml  redis_connection.py
partition_registry/action/: __init__.py  is_partition_ready.py  lock_partition.py  register_source.py  unlock_partition.py
partition_registry/actions/: __init__.py  check_partition_readiness.py  is_partition_ready.py  lock_partition.py  register_partition.py  register_provider.py  register_source.py  unlock_partition.py
partition_registry/actor/: events_registry.py  main_queue.py  partition_registry.py  provider_registry.py  source_registry.py
partition_registry/actor/queue/: __init__.py  main.py
partition_registry/actor/registry/: __init__.py  events_registry.py  partition_registry.py  provider_registry.py  source_registry.py
partition_registry/actor/registry/provider/: __init__.py  model.py  orm.py
partition_registry/actor/registry/source/: __init__.py  model.py  orm.py
partition_registry/control/: local.cache  mainflow.py  source_registry.py  test.py
partition_registry/controller/: partition_registry.py
partition_registry/data/: __init__.py  access_token.py  configuration.py  entity_type.py  error.py  event.py  event_state.py  exceptions.py  func.py  interval_tree.py  partition.py  partition_registry_data_structure.py  partition_registry_event.py  partition_registry_structure.py  partition_size.py  partition_strategy.py  provider.py  provider_type.py  queue.py  registry.py  response.py  source.py  source_type.py  status.py
partition_registry/integration/: postgres.py
partition_registry/orm/: __init__.py  events.py  partition_registry.py  partitions.py  provider_registry.py  providers.py  source_registry.py  sources.py
partition_registry_v2/control/: mainflow.py
partition_registry_v2/data/: partition.py  provider.py  queue.py  response.py
postgres/: init.sql  postgres.env
tests/: test_func.py  test_intersections.py  test_interval_tree.py  test_lock_partition.py  test_partition.py  test_partition_readiness.py  test_partition_registry_data_structure.py  test_provider.py  test_simplify_unlocked.py  test_source.py  test_source_readiness.py  test_source_registration.py  test_unlock_partition.py
tests/arbitrary/: _datetime.py  access_token.py  partition.py  partition_strategy.py  provider.py  source.py
