[build-system]
requires = ["poetry-core=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "partition-registry"
description = "Library to work with Partition Registry"
authors = ["Vladislav Bakanov <rewerty52@ya.ru>"]
readme = "README.md"
repository = "https://github.com/vladislav-bakanov/partition-registry/blob/master/pyproject.toml"
version = "0.0.1"
classifiers = [
    "Development Status :: Beta",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers :: Analytics",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">3.8, <=3.8.12"
SQLAlchemy = "1.3.24"
sqlalchemy-stubs = "0.4"
hypothesis = "^6.82.0"
psycopg2-binary = "2.9.7"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
pytest-cov = "4.1.0"
hypothesis = "6.82.0"
mypy = "1.4.1"
pylint = "2.9.6"
